Safari alignment fix

--- a/css/demo.css
+++ b/css/demo.css
@@ -206,6 +206,7 @@ main {
 
 .github {
 	display: inline-block;
+	vertical-align: middle;
 	margin: 0 0 2.5em;
 }
 
